Allow Rest Client and AI Service to be used as tools